# regex-potata

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ast.rs  error.rs  lib.rs  nfa.rs  parser.rs  parser_alt.rs  regex.rs  wasm.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ExpressionsPopup.tsx  Footer.tsx  GithubStat.tsx  Loader.tsx  Navbar.tsx  NfaVisualizer.tsx  RegexInput.tsx  Snippet.tsx  TestInput.tsx  ToolTip.tsx
web/src/utils/: colors.ts  extensions.ts  github.ts  viz.ts
