[package]
name = "regex-potata"
version = "0.1.0"
edition = "2021"
description = "Potata regex engine"
license = "MIT"
repository = "https//github.com/luckasRanarison/regex-potata"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]

[dependencies]
thiserror = "1.0.51"
wasm-bindgen = { version = "0.2.89", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]
